# modelClassroom

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/modelclassroom/: __init__.py
src/modelclassroom/models/: __init__.py
src/modelclassroom/tokenizers/: __init__.py  processor.py  tokenizer.py
src/modelclassroom/utils/: __init__.py  dictUtils.py
tests/: __init__.py
tests/tokenizers/: __init__.py
